docs-site/versioned_docs/version-3.5.0/api/classes/LaravelResponseStrategy.md
Defined in: [src/lib/strategies/laravel-response.strategy.ts:28](https://github.com/AndreaAlhena/ng-qubee/blob/1cd6a1e62b8ad701ae642ec09bab2c3c3e467b57/src/lib/strategies/laravel-response.strategy.ts#L28)

Response strategy for the Laravel (pagination-only) driver

Parses flat Laravel pagination responses:
```json
{
  "data": [...],
  "current_page": 1,
  "total": 100,
  "per_page": 15,
  "from": 1,
  "to": 15,
  "next_page_url": "...",
  "prev_page_url": "...",
  "first_page_url": "...",
  "last_page": 7,
  "last_page_url": "..."
}
```

The traversal algorithm (flat `response[options.X]` lookups) is
inherited from `AbstractFlatResponseStrategy`; this class exists so
`DriverEnum.LARAVEL` resolves to a distinct identity at the DI layer
even though the parsing logic is shared with Spatie.

## Extends

- `AbstractFlatResponseStrategy`

## Constructors

### Constructor

> **new LaravelResponseStrategy**(): `LaravelResponseStrategy`

#### Returns

`LaravelResponseStrategy`

#### Inherited from

`AbstractFlatResponseStrategy.constructor`

## Methods

### paginate()

> **paginate**\<`T`\>(`response`, `options`): [`PaginatedCollection`](PaginatedCollection.md)\<`T`\>

Defined in: [src/lib/strategies/abstract-flat-response.strategy.ts:35](https://github.com/AndreaAlhena/ng-qubee/blob/1cd6a1e62b8ad701ae642ec09bab2c3c3e467b57/src/lib/strategies/abstract-flat-response.strategy.ts#L35)

Parse a flat-envelope pagination response into a PaginatedCollection

#### Type Parameters

##### T

`T` *extends* [`IPaginatedObject`](../interfaces/IPaginatedObject.md)

#### Parameters

##### response

`Record`\<`string`, `any`\>

The raw API response object

##### options

`ResponseOptions`

The response key name configuration

#### Returns

[`PaginatedCollection`](PaginatedCollection.md)\<`T`\>

A typed PaginatedCollection instance

#### Inherited from

`AbstractFlatResponseStrategy.paginate`
